# Fairy-Stockfish-Lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
src/: fairystockfish.cpp  fairystockfish.h
test/: CMakeLists.txt  test_wrapper.cpp
